<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/offwhite">

    <include layout = "@layout/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.3"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:fontFamily="monospace"
            android:gravity="center"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/username"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:gravity="center"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edFirstName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/first_name"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:gravity="center"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edLastName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/last_name"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:gravity="center"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edAge"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/age"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="monospace"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias = "0.75"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_weight="0.7"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:backgroundTint="@color/brown"
            android:layout_marginEnd="30dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_weight="0.3"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:backgroundTint="@color/eggshell"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>